	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1053)
 * Added variable _all_file_loaders: space-separated list of hardcoded file loaders usable with _file_loader.
# (r1051,r1052)
 * Optional -R/--recursive[=arg] argument, overwrites (if set) or appends to (if beginning with + or |) 
   the "_pushdir_re" variable (recursed filename extensions).
# (r1046)
 * Introduced a "#!fim:+=" special description line to append to cached description.
 * Introduced a "#!fim:^=" special description line to prepend to cached description.
# (r1045)
 * Introduced a "#!fim:!=" special description line to reset all variables of the cached namespace.
# (r1043)
 * 'desc        "save"' functionality to save descriptions file data from the currently browsable images list.
# (r1048)
 * 'desc "-append" "save"' will work in append mode.
# (r1044,r1047)
 * 'desc "-all" "save"' will save also all descriptions file variables.
# (r1048)
 * 'desc "-nooverw" "-append" "save"' will either force overwrite; saving and appending possible, if user request.
# (r1039, also in branches/0.5)
 * to ease reproducible builds: imposing LC_ALL=C to $(YACC) and $(SORT), vim2html.pl reads SOURCE_DATE_EPOCH
# (r1038, also in branches/0.5)
 * fix: when stdint.h is available use uint8_t, uint16_t, uint32_t instead of non-portable __u8, __u16, __u32
# (r1037, also in branches/0.5)
 * fix: ./configure --disable-pcx was not properly disabling PCX format support
# (r1036, also in branches/0.5)
 * fix: compilation was broken without framebuffer (FIM_WITH_NO_FRAMEBUFFER)
# (r1035)
 * introduced --mark-from-image-descriptions-file: read file names from a
   description file and use them to mark current list files.
# (r1030)
 * fix: introduced alphanumeric restriction in the shebang variables (must
   begin with underscore or alphabetic, continue with underscore or alphanumeric).
# (r1027)
 * Keys '(' and ')' are now bound respectively to "goto '^p'" and "goto '$p'";