@@ -318,7 +318,7 @@ info : display information about the current file
 .B
 limit
 .fi
-limit [{expression} |{variable} {value}] : A browsable file list filtering function (like limiting in the 'mutt' program). Uses information loaded via \-\-load\-image\-descriptions\-file. If one argument only is provided, restrict to files whose description string matches {expression}. If two arguments are provided, restrict to files having property {variable} set to {value}. If invoked with one exclamation point ('!') as argument will restrict to the currently marked files only.  Invoked with no arguments, the original browsable files list is restored.
+limit [{expression} |{variable} {value}] : A browsable file list filtering function (like limiting in the 'mutt' program). Uses information loaded via \-\-load\-image\-descriptions\-file. If one argument only is provided, restrict to files whose description string matches {expression}. If two arguments are provided, restrict to files having property {variable} set to {value}. If invoked with one exclamation point ('!') as argument will restrict to the currently marked files only.  If invoked with '~!' will restrict to files with unique basename.  If with '~=', to files with duplicate basename;  if with '~1', to the first of the files with duplicate basename;  if with '~$\:', to the last of the files with duplicate basename.  Invoked with no arguments, the original browsable files list is restored.
 .fi
 
 .na
