@@ -412,6 +412,12 @@ ret:		return key;
 #if FIM_WANT_FILENAME_MARK_AND_DUMP
 		" If invoked with one exclamation point ('!') as argument will restrict to the currently marked files only. "
 #endif /* FIM_WANT_FILENAME_MARK_AND_DUMP */
+#if FIM_WANT_LIMIT_DUPBN
+		" If invoked with '~!' will restrict to files with unique basename. "
+		" If with '~=', to files with duplicate basename; "
+		" if with '~1', to the first of the files with duplicate basename; "
+		" if with '~$', to the last of the files with duplicate basename. "
+#endif /* FIM_WANT_LIMIT_DUPBN */
 		" Invoked with no arguments, the original browsable files list is restored." ),&browser_,&Browser::fcmd_limit));
 #endif /* FIM_WANT_PIC_LBFL */
 		addCommand(new Command(fim::string(FIM_FLT_LIST),fim::string(FIM_CMD_HELP_LIST),&browser_,&Browser::fcmd_list));
